pretend/tests/builds/bodies.stderr
error: Failed to generate pretend implementation
 --> $DIR/bodies.rs:5:1
  |
5 | #[pretend]
  | ^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: Method can only have at most one body parameter
 --> $DIR/bodies.rs:8:5
  |
8 |     async fn test_1(&self, body: String, json: String) -> Result<()>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Body parameter defined here
 --> $DIR/bodies.rs:8:28
  |
8 |     async fn test_1(&self, body: String, json: String) -> Result<()>;
  |                            ^^^^

error: Body parameter defined here
 --> $DIR/bodies.rs:8:42
  |
8 |     async fn test_1(&self, body: String, json: String) -> Result<()>;
  |                                          ^^^^
